--- a/templates/product/list.html
+++ b/templates/product/list.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ürün Listeleme Sayfası</title>
-</head>
-<body>
+{%  extends 'layout/base.html' %}
+
+{% block title %}
+Ürün Listeleme Sayfası
+{% endblock %}
+
+{%  block content %}
 
 Bu sayfa ürün listeleme sayfasıdır.
 
@@ -16,6 +16,5 @@ Bu sayfa ürün listeleme sayfasıdır.
     </tr>
     {% endfor %}
 </table>
+{% endblock %}
 
-</body>
-</html>
