--- a/templates/product/list.html
+++ b/templates/product/list.html
@@ -21,13 +21,27 @@
 
 {%  block content %}
 
-<table>
-    {% for product in products %}
-    <tr>
-        <td><a href="{% url 'product-detail' product.id %}">Ürün Adı : {{ product.name | upper }}</a></td>
-        <td>Ürün Açıklaması : {{ product.content }}</td>
-    </tr>
-    {% endfor %}
-</table>
+    <div class="my-3 p-3 bg-white rounded shadow-sm">
+    <h6 class="border-bottom border-gray pb-2 mb-0">Ürünler</h6>
+
+        {% for product in products %}
+
+        <div class="media text-muted pt-3">
+      <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+      <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <strong class="text-gray-dark">{{ product.name | upper }}</strong>
+          <a href="{% url 'product-detail' product.id %}">Detay</a>
+        </div>
+        <span class="d-block">{{ product.content }}</span>
+      </div>
+    </div>
+        {% endfor %}
+
+
+    <small class="d-block text-right mt-3">
+      <a href="#">Sonraki Sayfa</a>
+    </small>
+  </div>
 {% endblock %}
 
