--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -6,21 +6,17 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Ana Sayfa <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
+      <li class="nav-item {% if request.resolver_match.url_name == 'product-list' %}active{% endif %}">
         <a class="nav-link" href="{% url 'product-list'  %}">Ürünler</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'product-archive'  2019 5%}">Arşiv</a>
+        <a class="nav-link {% if request.resolver_match.url_name == 'product-archive' %}active{% endif %}" href="{% url 'product-archive'  2019 5%}">Arşiv</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">İşlemler</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Ürün Ekle</a>
+          <a class="dropdown-item" href="#">Çıkış</a>
         </div>
       </li>
     </ul>
