--- a/templates/admin/project/products_change_list.html
+++ b/templates/admin/project/products_change_list.html
@@ -2,7 +2,7 @@
 
 {% block object-tools %}
 
-    BURAYA BİRŞEYLER EKLEDİK.
+    Ürün yönetim sayfası.
     {{ block.super }}
 
 {% endblock object-tools %}
