--- a/templates/learning/contact/form.html
+++ b/templates/learning/contact/form.html
@@ -1,15 +1,17 @@
-{%  extends 'layout/base.html' %}
+{%  extends 'learning/layout/base.html' %}
 
 {% block title %}
-Ürün Ekle
+İletişim Formu
 {% endblock %}
 
 {% block top %}
   <div class="jumbotron">
     <div class="container">
 
-      <h1 class="display-3">Ürün Ekle!</h1>
-      <p>Ürün ekleme sayfasıdır. </p>
+      <h1 class="display-3">İletişim!</h1>
+      <p>
+            Bu sayfadan bizimle iletişime geçebilirsiniz.
+      </p>
     </div>
   </div>
 {% endblock %}
