--- a/templates/learning/product/add_product.html
+++ b/templates/learning/product/add_product.html
@@ -1,17 +1,15 @@
-{%  extends 'layout/base.html' %}
+{%  extends 'learning/layout/base.html' %}
 
 {% block title %}
-İletişim Formu
+Ürün Ekle
 {% endblock %}
 
 {% block top %}
   <div class="jumbotron">
     <div class="container">
 
-      <h1 class="display-3">İletişim!</h1>
-      <p>
-            Bu sayfadan bizimle iletişime geçebilirsiniz.
-      </p>
+      <h1 class="display-3">Ürün Ekle!</h1>
+      <p>Ürün ekleme sayfasıdır. </p>
     </div>
   </div>
 {% endblock %}
