--- a/templates/project/layout/base.html
+++ b/templates/project/layout/base.html
@@ -14,7 +14,7 @@
 <body>
 
 
-{%  include 'layout/header.html' %}
+{%  include 'project/layout/header.html' %}
 <main role="main">
   {% block top %}
   <div class="jumbotron">
@@ -46,7 +46,7 @@
 
 
 
-{%  include 'layout/footer.html' %}
+{%  include 'project/layout/footer.html' %}
 
 <script src="{%  static 'js/jquery-slim.min.js' %}"></script>
 <script src="{%  static 'js/bootstrap.min.js' %}"></script>
