--- a/templates/learning/layout/header.html
+++ b/templates/learning/layout/header.html
@@ -19,6 +19,16 @@
           <a class="dropdown-item" href="#">Çıkış</a>
         </div>
       </li>
+
+        {% if user.is_authenticated %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Üye İşlemleri</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="{% url 'password_change' %}">Şifre Değiştir</a>
+              <a class="dropdown-item" href="{% url 'logout' %}">Çıkış</a>
+            </div>
+          </li>
+        {% endif %}
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="arama kelimesi..." aria-label="Search">
