--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,15 +1,15 @@
 {%  extends 'project/layout/base.html' %}
 
 {% block title %}
-Şifre Sıfırlama
+Şifre Oluştur
 {% endblock %}
 
 {% block top %}
   <div class="jumbotron">
     <div class="container">
 
-      <h1 class="display-3">Şifre Sıfırlama!</h1>
-            <p>Şifre sıfırlamayı aşağıdaki form ile yapabilirsiniz. </p>
+      <h1 class="display-3">Şifre Oluşturma!</h1>
+            <p>Şifrenizi aşağıdaki form ile oluşturabilirsiniz. </p>
     </div>
   </div>
 {% endblock %}
@@ -21,7 +21,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Şifre Değiştir</button>
+            <button type="submit">Şifre Oluştur</button>
         </form>
     {% endif %}
 {% endblock %}
