--- a/templates/project/accounts/role.html
+++ b/templates/project/accounts/role.html
@@ -5,11 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+
+{{ dealer_managers }}
+<br>
+{{ distributor_managers }}
+
 </body>
 </html>
