--- a/templates/project/layout/base.html
+++ b/templates/project/layout/base.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>
         {% block title  %}
-            Base Title
         {%  endblock %}
     </title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -14,28 +13,41 @@
 <body>
 
 
-{%  include 'project/layout/header.html' %}
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="#">STOCKS PROJECT</a>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+
+        {% if not user.is_authenticated %}
+          <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+            <a class="nav-link" href="{% url 'login' %}">Üye Girişi</a>
+          </li>
+        {% else %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Üye İşlemleri</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="{% url 'password_change' %}">Şifre Değiştir</a>
+              <a class="dropdown-item" href="{% url 'logout' %}">Çıkış</a>
+            </div>
+          </li>
+        {% endif %}
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="arama kelimesi..." aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Ara</button>
+    </form>
+  </div>
+</nav>
+
 <main role="main">
   {% block top %}
-  <div class="jumbotron">
-    <div class="container">
-
-      <h1 class="display-3">Hello, world!</h1>
-      <p>
-          This is a template for a simple marketing or informational website.
-          It includes a large callout called a jumbotron and three supporting pieces of content.
-          Use it as a starting point to create something more unique.
-      </p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-    </div>
-  </div>
   {%  endblock %}
 
   <div class="container">
     <!-- Example row of columns -->
 
     {% block content  %}
-        Base content
     {%  endblock %}
     <hr>
 
@@ -43,10 +55,9 @@
 
 </main>
 
-
-
-
-{%  include 'project/layout/footer.html' %}
+<footer class="container">
+  <p>&copy; Created for Django Course 2019</p>
+</footer>
 
 <script src="{%  static 'js/jquery-slim.min.js' %}"></script>
 <script src="{%  static 'js/bootstrap.min.js' %}"></script>
