--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
-{%  extends 'learning/layout/base.html' %}
+{%  extends 'project/layout/base.html' %}
 
 {% block title %}
-Şifre Sıfırlama
+Şifre Sıfırlandı
 {% endblock %}
 
 {% block top %}
