--- a/templates/project/accounts/role.html
+++ b/templates/project/accounts/role.html
@@ -1,14 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%  extends 'project/layout/base.html' %}
 
-{{ dealer_managers }}
-<br>
-{{ distributor_managers }}
+{%  block content %}
 
-</body>
-</html>
+    {% if distributors  %}
+    <div class="card-deck">
+        {% for distributor in distributors %}
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{ distributor.name }}</h5>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">
+                  {%  if distributor.author_id == request.user.id  %}
+                      Distribütör Yöneticisi
+                  {% else %}
+                      Distribütör Personeli
+                  {% endif %}
+              </small>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    {% if dealers  %}
+    <div class="card-deck">
+        {% for dealer in dealers %}
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{ dealer.name }}</h5>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">
+                  {%  if dealer.author_id == request.user.id  %}
+                      Bayi Yöneticisi
+                  {% else %}
+                      Bayi Personeli
+                  {% endif %}
+              </small>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+{% endblock %}
