--- a/templates/project/accounts/distributor.html
+++ b/templates/project/accounts/distributor.html
@@ -1,28 +1,36 @@
 {%  extends 'project/layout/base.html' %}
 
 {%  block content %}
-{{ dealer }}
-<div class="jumbotron">
-<div class="row w-100">
-        <div class="col-md-3">
-            <div class="card border-info mx-sm-1 p-3">
-                <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-book" aria-hidden="true"></span></div>
-                <div class="text-info text-center mt-3"><h4>Alacaklar</h4></div>
+    {{ distributor.name }}
+    <div class="jumbotron">
+    <div class="row w-100">
+            <div class="col-md-3">
+                <div class="card border-info mx-sm-1 p-3">
+                    <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-book" aria-hidden="true"></span></div>
+                    <div class="text-info text-center mt-3"><h4>Alacaklar</h4></div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card border-success mx-sm-1 p-3">
-                <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
-                <div class="text-success text-center mt-3"><h4>Siparişler</h4></div>
+            <div class="col-md-3">
+                <div class="card border-success mx-sm-1 p-3">
+                    <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
+                    <div class="text-success text-center mt-3"><h4>Siparişler</h4></div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card border-danger mx-sm-1 p-3">
-                <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-user" aria-hidden="true"></span></div>
-                <div class="text-danger text-center mt-3"><h4>Personel Ekle</h4></div>
-            </div>
-        </div>
 
-     </div>
-</div>
+            <div class="col-md-3">
+                <div class="card border-danger mx-sm-1 p-3">
+                    <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-user" aria-hidden="true"></span></div>
+                    <div class="text-danger text-center mt-3"><h4><a href="{% url 'create-staff' %}">Personel Ekle</a></h4></div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card border-danger mx-sm-1 p-3">
+                    <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-user" aria-hidden="true"></span></div>
+                    <div class="text-danger text-center mt-3"><h4><a href="{% url 'staff-list' %}">Personel Listele</a></h4></div>
+                </div>
+            </div>
+
+         </div>
+    </div>
 {% endblock %}
