--- a/templates/project/accounts/dealer.html
+++ b/templates/project/accounts/dealer.html
@@ -1,29 +1,58 @@
 {%  extends 'project/layout/base.html' %}
 
+{% block top %}
+    <div class="jumbotron"><h4>Bayi Yönetimi : {{ dealer.name }}</h4></div>
+{% endblock %}
+
 {%  block content %}
-<div class="jumbotron">
-<div class="row w-100">
-        <div class="col-md-3">
-            <div class="card border-info mx-sm-1 p-3">
-                <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-book" aria-hidden="true"></span></div>
-                <div class="text-info text-center mt-3"><h4>Alacaklar</h4></div>
+    <div class="jumbotron">
+        <div class="row w-100">
+            <div class="col-md-4">
+                <div class="card border-danger p-3">
+                    <div class="card border-danger text-danger p-3 my-card" >
+                        <span class="fa fa-user" aria-hidden="true"></span>
+                    </div>
+                    <div class="text-center mt-3">
+                        <h4><a href="{% url 'list-staff' %}">Personel Yönetimi</a></h4>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card border-success mx-sm-1 p-3">
-                <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
-                <div class="text-success text-center mt-3"><h4>Siparişler</h4></div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card border-danger mx-sm-1 p-3">
-                <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-user" aria-hidden="true"></span></div>
-                <div class="text-danger text-center mt-3"><h4>Personel Ekle</h4></div>
-            </div>
-        </div>
 
-     </div>
-</div>
+            <div class="col-md-4">
+                <div class="card border-info p-3">
+                    <div class="card border-info text-info p-3 my-card">
+                        <span class="fa fa-book" aria-hidden="true"></span>
+                    </div>
+                    <div class="text-center mt-3">
+                        <h4>Ödeme Yönetimi</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card border-success p-3">
+                    <div class="card border-success text-success p-3 my-card">
+                        <span class="fa fa-eye" aria-hidden="true"></span>
+                    </div>
+                    <div class="text-center mt-3">
+                        <h4>Sipariş Yönetimi</h4>
+                    </div>
+                </div>
+            </div>
 
+         </div>
+        <br>
+        <div class="row w-100">
+            <div class="col-md-4">
+                <div class="card border-danger p-3">
+                    <div class="card border-danger text-danger p-3 my-card" >
+                        <span class="fa fa-user" aria-hidden="true"></span>
+                    </div>
+                    <div class="text-center mt-3">
+                        <h4><a href="{% url 'project:list-shop' %}">Sipariş Ver</a></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
