--- a/templates/project/accounts/role.html
+++ b/templates/project/accounts/role.html
@@ -1,10 +1,13 @@
 {%  extends 'project/layout/base.html' %}
 
+
+{% block top %}
+        <div class="jumbotron"><h4>Rol Seçimi : {{ request.user.username }}</h4></div>
+{% endblock %}
+
 {%  block content %}
-
-
-    {% if distributors  %}
     <div class="card-deck">
+    {% if distributors  %}
         {% for distributor in distributors %}
           <div class="card">
             <div class="card-body">
@@ -21,15 +24,13 @@
             </div>
           </div>
         {% endfor %}
-    </div>
     {% endif %}
 
     {% if dealers  %}
-    <div class="card-deck">
         {% for dealer in dealers %}
           <div class="card">
             <div class="card-body">
-                <h5 class="card-title"><a href="{% url 'distributor-home' dealer.pk %}">{{ dealer.name }}</a></h5>
+                <h5 class="card-title"><a href="{% url 'dealer-home' dealer.pk %}">{{ dealer.name }}</a></h5>
             </div>
             <div class="card-footer">
               <small class="text-muted">
@@ -42,7 +43,7 @@
             </div>
           </div>
         {% endfor %}
-    </div>
     {% endif %}
+    </div>
 
 {% endblock %}
