--- a/templates/project/accounts/distributor.html
+++ b/templates/project/accounts/distributor.html
@@ -19,7 +19,7 @@
             </div>
             {% endif %}
 
-            {% if perms.project.manage_payment or request.user.is_superuser %}
+            {% if perms.project.manage_payment %}
             <div class="col-md-4">
                 <div class="card border-info p-3">
                     <div class="card border-info text-info p-3 my-card">
@@ -32,7 +32,7 @@
             </div>
             {% endif %}
 
-            {% if perms.project.manage_order or request.user.is_superuser %}
+            {% if perms.project.manage_order %}
             <div class="col-md-4">
                 <div class="card border-success p-3">
                     <div class="card border-success text-success p-3 my-card">
@@ -48,7 +48,7 @@
         <br>
         <div class="row w-100">
 
-            {% if perms.project.manage_product or request.user.is_superuser %}
+            {% if perms.project.manage_product %}
             <div class="col-md-4">
                 <div class="card border-info mx-sm-1 p-3">
                     <div class="card border-info shadow text-info p-3 my-card" >
@@ -61,7 +61,7 @@
             </div>
             {% endif %}
 
-            {% if perms.project.manage_dealer or request.user.is_superuser %}
+            {% if perms.project.manage_dealer  %}
             <div class="col-md-4">
                 <div class="card border-warning mx-sm-1 p-3">
                     <div class="card border-warning shadow text-warning p-3 my-card">
