--- a/templates/project/accounts/distributor.html
+++ b/templates/project/accounts/distributor.html
@@ -1,6 +1,12 @@
 {%  extends 'project/layout/base.html' %}
 {% block top %}
-    <div class="jumbotron"><h4>Distribütör Yönetimi : {{ distributor.name }}</h4></div>
+    <div class="jumbotron">
+        <h4>
+            <a href="{% url 'role-list' %}">Role Seçimi</a> ->
+            Distribütör Yönetimi : {{ distributor.name }}
+        </h4>
+    </div>
+
 {% endblock %}
 
 {%  block content %}
