--- a/templates/project/dealer/list.html
+++ b/templates/project/dealer/list.html
@@ -1,7 +1,11 @@
 {%  extends 'project/layout/base.html' %}
 
 {% block top %}
-    <div class="jumbotron"><h4>Bayi Listele</h4></div>
+    <div class="jumbotron">
+        <h4>
+            Bayiler : {{ request.session.role_name }}
+        </h4>
+    </div>
     {% if messages %}
         {% for message in messages %}
             <div class="alert alert-danger" role="alert">
