--- a/templates/project/product/edit.html
+++ b/templates/project/product/edit.html
@@ -1,7 +1,11 @@
 {%  extends 'project/layout/base.html' %}
 
 {% block top %}
-    <div class="jumbotron"><h4>Ürün Düzenle</h4></div>
+    <div class="jumbotron">
+        <h4>
+            <a href="{% url 'project:list-product' %}">Ürünler</a> -> Ürün Düzenle : {{ request.session.role_name }}
+        </h4>
+    </div>
 {% endblock %}
 
 {%  block content %}
