--- a/templates/project/accounts/edit_permissions.html
+++ b/templates/project/accounts/edit_permissions.html
@@ -3,7 +3,7 @@
 {% block top %}
     <div class="jumbotron">
         <h4>
-            <a href="{% url 'project:list-product' %}">Personeller</a> ->
+            <a href="{% url 'list-staff' %}">Personeller</a> ->
             Personel Yetki Düzenle : {{ request.session.role_name }}
         </h4>
     </div>
