--- a/templates/project/accounts/staff_list.html
+++ b/templates/project/accounts/staff_list.html
@@ -3,7 +3,7 @@
 {% block top %}
     <div class="jumbotron">
         <h4>
-            <a href="{% url 'project:list-product' %}">Personeller</a>
+            Personeller
         </h4>
     </div>
 {% endblock %}
