--- a/templates/project/shop/detail.html
+++ b/templates/project/shop/detail.html
@@ -10,17 +10,27 @@
 
 {%  block content %}
     <div class="card">
-        {% if product.cover %}
-            <img src="{{ product.cover.url }}" class="card-img-top" alt="{{ product.name }}">
-        {% endif %}
+
         <div class="card-body">
             <h5 class="card-title">{{ product.brand }}</h5>
             <p class="card-text">
+
+                {% if product.cover %}
+                <div style="float: left;margin-right:20px ">
+                <img src="{{ product.cover.url }}" class="card-img-top" alt="{{ product.name }}" style="max-width: 300px;float: left">
+                {% endif %}
+                </div>
                 {{ product.content }}
-                <br>
-                <a href="#" class="btn btn-primary">Sepete Ekle</a>
+                <br><br>
+                Ürün Fiyatı: {{ product.price }} TL<br><br>
+                Stok Adedi : {{ product.stock_count }}<br><br><br>
+                <form action="{% url "project:add-cart" product.id %}" method="post">
+                  {% csrf_token %}
+                  {{ form.quantity }}
+                  <input type="submit" value="Sepete Ekle" class="btn btn-primary">
+                </form>
             </p>
-            <p class="card-text"><small class="text-muted">{{ product.price }} TL | Stok : {{ product.stock_count }}</small></p>
+            <p class="card-text"><small class="text-muted"></small></p>
         </div>
     </div>
 {% endblock %}
