--- a/templates/project/accounts/dealer.html
+++ b/templates/project/accounts/dealer.html
@@ -39,7 +39,7 @@
                         <span class="fa fa-eye" aria-hidden="true"></span>
                     </div>
                     <div class="text-center mt-3">
-                        <h4>Sipariş Yönetimi</h4>
+                        <h4><a href="{% url 'project:list-order' %}">Sipariş Yönetimi</a></h4>
                     </div>
                 </div>
             </div>
