--- a/templates/project/accounts/distributor.html
+++ b/templates/project/accounts/distributor.html
@@ -45,7 +45,7 @@
                         <span class="fa fa-eye" aria-hidden="true"></span>
                     </div>
                     <div class="text-center mt-3">
-                        <h4>Sipariş Yönetimi</h4>
+                        <h4><a href="{% url 'project:distributor-list-order' %}">Sipariş Yönetimi</a></h4>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                         <span class="fa fa-eye" aria-hidden="true"></span>
                     </div>
                     <div class="text-center mt-3">
-                        <h4><a href="{% url 'project:list-dealer' %}">Bayi Yönetimi</a></h4>
+                        <h4><a href="{% url 'project:distributor-list-dealer' %}">Bayi Yönetimi</a></h4>
                     </div>
                 </div>
             </div>
