--- a/templates/project/distributor/dealer/create.html
+++ b/templates/project/distributor/dealer/create.html
@@ -3,7 +3,7 @@
 {% block top %}
     <div class="jumbotron">
         <h4>
-            <a href="{% url 'project:list-dealer' %}">Bayiler</a> -> Bayi Ekle : {{ request.session.role_name }}
+            <a href="{% url 'project:distributor-list-dealer' %}">Bayiler</a> -> Bayi Ekle : {{ request.session.role_name }}
         </h4>
     </div>
 {% endblock %}
