--- a/templates/project/distributor/order/delete.html
+++ b/templates/project/distributor/order/delete.html
@@ -3,7 +3,7 @@
 {% block top %}
     <div class="jumbotron">
         <h4>
-            <a href="{% url 'project:list-order' %}">Sipariş Listesi</a> -> Sipariş Sil -> Sipariş ID : {{ object }}
+            <a href="{% url 'project:distributor-list-order' %}">Sipariş Listesi</a> -> Sipariş Sil -> Sipariş ID : {{ object }}
         </h4>
     </div>
 {% endblock %}
